crates/oxc_css_parser/tests/error/less/ie-star-top-level.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect one of `<ident>` or `@{`, but found `<number>`
  ┌─ ie-star-top-level.less:1:8
  │
1 │ *zoom: 1
  │        ^
